ci: Rename and filter Go files for linting, add skip lint job
Rename Lint workflow YAML file to "lint_go.yml" and filter paths for only Go files in pull requests. Added "skip lint" job to allow skipping linting for non-Go files.

--- a/.github/workflows/lint_go.yml
+++ b/.github/workflows/lint_go.yml
@@ -1,10 +1,12 @@
-name: Lint
+name: Lint go
 
 on:
   pull_request:
+    paths:
+      - '**.go'
 
 jobs:
-  lint:
+  validate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
